fix: add and persist items through the UI
This allows a user to add items through a simple UI.
The items are persisted to `localStorage` and will be loaded on page load.

fix #3

--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,8 @@
 .highlight {
-    background-color: yellow;
-    padding: 0.5rem;
+  background-color: yellow;
+  padding: 0.5rem;
+}
+
+.hidden {
+  display: none;
 }
